Fix scrollbar and height of megamenu
ERM29182

[4.3.x]

--- a/resources/stylesheets/megamenu.css
+++ b/resources/stylesheets/megamenu.css
@@ -34,8 +34,7 @@
 .mega-menu-wrapper {
 	flex-wrap: wrap;
 	justify-content: center;
-	overflow-y: scroll;
-	height: 90vh;
+	overflow-y: auto;
 	margin: 0;
 }
 .mega-menu .mm-edit-link {
@@ -73,6 +72,7 @@
 	background-color: transparent;
 	display: block;
 	margin-top: 1.5rem;
+	min-height: 450px;
 }
 .card-group {
 	justify-content: center;
